# Oykos-Triage-AI

./: .env.example  .gitignore  EVALUATION_REPORT.md  README.md  SYSTEM_ARCHITECTURE.md  TEST_DATASET.md  build_test_dataset.py  cli.py  config.yaml  expand_test_dataset.py  pyproject.toml  synthetic_cases.py
data/catalog/: symptom_catalog.json
data/eval/: test_dataset.csv  test_dataset_stats.md
data/test/: all_categories.json  domain_catalog.json  test_dataset.jsonl
docs/: CODEBASE_ARCHITECTURE.md  EVALUATION_REPORT.md  OYKOMED_INTEGRATOR_GPT55_AGENT_HANDOFF.md  OYKOMED_INTEGRATOR_GPT55_MIGRATION.md  SYSTEM_ARCHITECTURE.md  TEST_DATASET.md  symptom-extraction-pipeline.md
scripts/: build_embeddings.py  build_test_dataset.py  compare_results.py  enrich_catalog.py  enrich_targeted.py  expand_test_dataset.py  fix_gold_labels.py
symptom_extraction/: __init__.py  config.py  models.py
symptom_extraction/catalog/: enrich.py  loader.py
symptom_extraction/embeddings/: encoder.py  index.py
symptom_extraction/evaluation/: metrics.py  report.py  runner.py
symptom_extraction/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
symptom_extraction/pipeline/: orchestrator.py  stage1_segmentation.py  stage2a_dense.py  stage2b_bm25.py  stage2c_llm_extract.py  stage3_fusion.py  stage4_extraction.py  stage5_gating.py  verifier.py
symptom_extraction/prompts/: templates.py
