[project]
name = "oykos-triage-ai"
version = "0.1.0"
description = "Pediatric symptom extraction from Italian parent messages using base LLMs"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tqdm>=4.65.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-genai>=1.0.0"]
all = ["openai>=1.50.0", "anthropic>=0.40.0", "google-genai>=1.0.0"]
pipeline = [
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "simplemma>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
oykos = "cli:cli"

[tool.setuptools.packages.find]
include = ["symptom_extraction*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
